# Defend-your-thesis

./: .gitignore  .pylintrc  04-research-assistant.ipynb  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
doc/: diagrams.excalidraw
notebook/: playground.ipynb
src/: agent.py  embeddings.py  examiners.py  ingest.py  interviews.py  presentation.py  prompts.py  recorder.py  states.py  store.py  utils.py
