[project]
name = "defend-your-thesis"
version = "0.1.0"
description = "Defend your thesis, an AI agent to help you defend your thesis. It can also help you outperform your presentation under your boss"
authors = [
    { name = "Xiang Bai", email = "baixianger@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chroma>=0.2.0",
    "dashscope>=1.24.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "lxml>=6.0.0",
    "protobuf==5.29.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "PyMuPDF",
]

[dependency-groups]
dev = [
    "rich>=14.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.12.7",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-api>=0.2.125",
]

[tool.pylint.MASTER]
ignore-paths = '^notebooks/.*$'

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
"notebooks/*" = ["E", "F", "I", "D",  "D401", "T201", "UP",]
[tool.ruff.lint.pydocstyle]
convention = "google"